@@ -1,0 +1,10 @@
+<html
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:tal="http://xml.zope.org/namespaces/tal"
+    tal:omit-tag="python: True">
+
+
+    <style type="text/css" rel="stylesheet"
+           tal:content="view/css" />
+
+</html>
